--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.teleconta.pas">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,6 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirstApptutorial"
         tools:targetApi="31">
+
+
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
@@ -38,6 +41,48 @@
         </activity>
 
         <activity android:name=".activities.PaidBillingsActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirstApptutorial">
+        </activity>
+
+        <activity android:name=".activities.UserDataActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirstApptutorial">
+        </activity>
+
+        <activity android:name=".activities.ChooseLineActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirstApptutorial">
+        </activity>
+
+        <activity android:name=".activities.ViewServicesActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirstApptutorial">
+        </activity>
+
+        <activity android:name=".activities.SolicitationMainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirstApptutorial">
+        </activity>
+
+        <activity android:name=".activities.CreateSolicitationChooseLineActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirstApptutorial">
+        </activity>
+
+        <activity android:name=".activities.CreateSolicitationChooseTypeActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirstApptutorial">
+        </activity>
+
+        <activity android:name=".activities.CreateSolicitationMain"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FirstApptutorial">
